--- a/public/css/style_custom.css
+++ b/public/css/style_custom.css
@@ -1,10 +1,11 @@
-.product-image{
+.banner-image, .product-image{
     width:100px;
     height:100px;
     margin-top: 10px;
 }
 .alert{
     background: #66b74a;
+    color: #ffffff;
 }
 .alert-danger{
     background-color: #ebccd1 !important;
